--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,12 @@
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
+        "symfony/http-client": "5.0.*",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "5.0.*",
         "symfony/security-core": "5.0.*",
+        "symfony/serializer": "5.0.*",
+        "symfony/serializer-pack": "^1.0",
         "symfony/twig-pack": "^1.0",
         "symfony/yaml": "5.0.*"
     },
